# open-standards

./: .gitignore  CHARTER.md  INGEST.md  NOTICE  README.md  RESEARCH.md
arl/arl-rs/: Cargo.toml
arl/arl-rs/crates/arl-cli/: Cargo.toml
arl/arl-rs/crates/arl-core/: Cargo.toml
arl/arl-rs/crates/arl-sandbox/: Cargo.toml
arl/arl-rs/crates/arl-wasm/: Cargo.toml
eoc/eoc-bench/: Cargo.toml
eoc/eoc-bench/crates/eoc-bench/: Cargo.toml
eoc/eoc-bench/crates/eoc-bench-mt/: Cargo.toml
eoc/eoc-bench/crates/eoc-bench-router/: Cargo.toml
eoc/eoc-bench/crates/eoc-bench-runner/: Cargo.toml
eoc/eoc-rs/: Cargo.toml  README.md  rust-toolchain.toml
eoc/eoc-rs/crates/eoc/: Cargo.toml
eoc/eoc-rs/crates/eoc-agent/: Cargo.toml
eoc/eoc-rs/crates/eoc-cache/: Cargo.toml
eoc/eoc-rs/crates/eoc-carbon/: Cargo.toml
eoc/eoc-rs/crates/eoc-cascade/: Cargo.toml
eoc/eoc-rs/crates/eoc-core/: Cargo.toml
eoc/eoc-rs/crates/eoc-distributed/: Cargo.toml
eoc/eoc-rs/crates/eoc-embeddings/: Cargo.toml
eoc/eoc-rs/crates/eoc-eval/: Cargo.toml
eoc/eoc-rs/crates/eoc-graph/: Cargo.toml
eoc/eoc-rs/crates/eoc-kv/: Cargo.toml
eoc/eoc-rs/crates/eoc-local/: Cargo.toml
eoc/eoc-rs/crates/eoc-memory/: Cargo.toml
eoc/eoc-rs/crates/eoc-meter/: Cargo.toml
eoc/eoc-rs/crates/eoc-multimodal/: Cargo.toml
eoc/eoc-rs/crates/eoc-neural/: Cargo.toml
eoc/eoc-rs/crates/eoc-observability/: Cargo.toml
eoc/eoc-rs/crates/eoc-quantize/: Cargo.toml
eoc/eoc-rs/crates/eoc-rag/: Cargo.toml
eoc/eoc-rs/crates/eoc-rerank/: Cargo.toml
eoc/eoc-rs/crates/eoc-route-learned/: Cargo.toml
eoc/eoc-rs/crates/eoc-safety/: Cargo.toml
eoc/eoc-rs/crates/eoc-spec-decode/: Cargo.toml
eoc/eoc-rs/crates/eoc-streaming/: Cargo.toml
eoc/eoc-rs/crates/eoc-tools/: Cargo.toml
eoc/eoc-rs/crates/eoc-vendor-api/: Cargo.toml
eoc/eoc-rs/crates/eoc-wasm/: Cargo.toml
joule-ui/joule-ui-rs/: Cargo.toml
joule-ui/joule-ui-rs/crates/joule-ui-core/: Cargo.toml
jouleclaw/jouleclaw-rs/: Cargo.toml
jouleclaw/jouleclaw-rs/crates/jouleclaw-agent/: Cargo.toml
jouleclaw/jouleclaw-rs/crates/jouleclaw-agents-md/: Cargo.toml
jouleclaw/jouleclaw-rs/crates/jouleclaw-approve/: Cargo.toml
jouleclaw/jouleclaw-rs/crates/jouleclaw-audit/: Cargo.toml
jouleclaw/jouleclaw-rs/crates/jouleclaw-backend-apple/: Cargo.toml  build.rs
jouleclaw/jouleclaw-rs/crates/jouleclaw-backend-reference/: Cargo.toml
jouleclaw/jouleclaw-rs/crates/jouleclaw-bounded/: Cargo.toml
openpay/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
openpay/.github/workflows/: ci.yml
openpay/compliance/: README.md  hsm-kms-guidance.md  pci-zero-architecture.md  qsa-checklist.md  scope-map.md
openpay/crates/op-3ds2/: Cargo.toml
openpay/crates/op-3ds2/src/: acs.rs  (+18 more)
openpay/crates/op-batch/: Cargo.toml
openpay/crates/op-bin/: Cargo.toml
openpay/crates/op-bnpl/: Cargo.toml
openpay/crates/op-cli/: Cargo.toml
openpay/crates/op-connect/: Cargo.toml
openpay/crates/op-core/: Cargo.toml
openpay/crates/op-crypto-extra/: Cargo.toml
openpay/crates/op-dispute/: Cargo.toml
openpay/crates/op-dispute-evidence/: Cargo.toml
openpay/crates/op-driver-sdk/: Cargo.toml
openpay/crates/op-emv/: Cargo.toml
openpay/crates/op-ewallets-asia/: Cargo.toml
openpay/crates/op-ffi-jni/: Cargo.toml
openpay/crates/op-ffi-swift/: Cargo.toml  build.rs
openpay/crates/op-fraud/: Cargo.toml
openpay/crates/op-fraud-graph/: Cargo.toml
openpay/crates/op-fx/: Cargo.toml
openpay/crates/op-graph/: Cargo.toml
openpay/crates/op-iso20022/: Cargo.toml
openpay/crates/op-iso8583/: Cargo.toml
openpay/crates/op-ledger/: Cargo.toml
openpay/crates/op-mobile-wallets/: Cargo.toml
openpay/crates/op-openbanking/: Cargo.toml
openpay/crates/op-orchestrator/: Cargo.toml
openpay/crates/op-payouts/: Cargo.toml
openpay/crates/op-rails-a2a/: Cargo.toml
openpay/crates/op-rails-card/: Cargo.toml
openpay/crates/op-rails-crypto/: Cargo.toml
openpay/crates/op-reconciliation/: Cargo.toml
openpay/crates/op-refund/: Cargo.toml
openpay/crates/op-revrec/: Cargo.toml
openpay/crates/op-routing/: Cargo.toml
openpay/crates/op-screening/: Cargo.toml
openpay/crates/op-server/: Cargo.toml
openpay/crates/op-settlement/: Cargo.toml
openpay/crates/op-statements/: Cargo.toml
openpay/crates/op-subscriptions/: Cargo.toml
openpay/crates/op-tax/: Cargo.toml
openpay/crates/op-vault/: Cargo.toml
openpay/crates/op-wasm/: Cargo.toml  README.md
openpay/crates/op-webhook/: Cargo.toml
openpay/docs/: 00-foundation.md  02-iso20022-progress.md  03-emv-progress.md  04-rails-card-progress.md  05-rails-a2a-progress.md  06-fraud-progress.md  07-vault-progress.md  08-ffi-swift-progress.md  09-ffi-jni-progress.md  10-wasm-progress.md  11-orchestrator-progress.md  12-ledger-progress.md  13-webhook-progress.md  14-graph-progress.md  15-reconciliation-progress.md  16-persistent-graph-progress.md  17-time-travel-progress.md  18-graph-routing-progress.md  19-discrepancy-signal-progress.md  20-omnibus-progress.md  21-sota-sweep-progress.md  22-settlement-progress.md  23-server-progress.md  24-driver-sdk-progress.md  25-crypto-rail-progress.md  26-graph-persistence-progress.md  27-subscriptions-progress.md  28-webhooks-progress.md  29-fx-progress.md  30-3ds-resume-progress.md  31-operator-bringup-progress.md
openpay/docs/deploy/: Caddyfile.sample  README.md  backup.md  launch.sh  monitoring.md  openpay.env.sample  openpay.service  quickstart.md
openpay/docs/observability/: README.md  grafana-dashboard.json
openpay/examples/demo-merchant/: Cargo.toml  README.md
openpay/examples/headless-server/: Cargo.toml
openpay/examples/kiosk-linux/: Cargo.toml
openpay/examples/pci-zero/: Cargo.toml  README.md
smart-byte/smart-byte-rs/: Cargo.toml
wai/wai-rs/: Cargo.toml  build.rs  cbindgen.toml
wai/wai-rs/examples/: dl_check.rs  jpeg_test.rs  opus_check.rs
wai/wai-rs/include/: wai.h
wai/wai-rs/src/: container.rs  ffi.rs  ffi_neural.rs  lib.rs
wai/wai-rs/tests/: ffi_robustness.rs  fuzz_smoke.rs  neural_native_decode.rs
wai/wai-web/: Cargo.toml
wai/wai-web/src/: lib.rs
(+1856 files in other folders)
