[workspace]
resolver = "3"
members = [
    "crates/arl-core",
    "crates/arl-sandbox",
    "crates/arl-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/Transaction-Science/open-standards"
authors = ["ARL Contributors"]
description = "ARL — AI Readiness Level. Apache-2.0 Rust reference implementation of the universal, vendor-neutral AI readiness measurement standard."

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
# Attestation primitives — neutral industry standards (RFC 8032 + FIPS 180-4),
# the same set named in ARL-S §"Reference stack".
ed25519-dalek = "2"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
