[workspace]
resolver = "3"
members = [
    # Phase 1 — foundation
    "crates/jouleclaw-core",
    "crates/jouleclaw-topology",
    "crates/jouleclaw-energy",

    # Phase 2 — cascade + format + persistence + wire
    "crates/jouleclaw-cascade",
    "crates/jouleclaw-loader-gguf",
    "crates/jouleclaw-pack",
    "crates/jouleclaw-history",
    "crates/jouleclaw-wire",

    # Phase 3 — backends + runtime
    "crates/jouleclaw-backend-reference",
    "crates/jouleclaw-backend-apple",
    "crates/jouleclaw-runtime",

    # Phase 4 — model tiers
    "crates/jouleclaw-liquid",   # L3 CfC SSM
    "crates/jouleclaw-prism",    # L3 1-bit / ternary BitNet
    "crates/jouleclaw-mrl",      # L2 Matryoshka embeddings
    "crates/jouleclaw-lmm",      # L3 multimodal (vision/text/audio)
    "crates/jouleclaw-ebm",      # L1/L3 energy-based constraint sat
    # gemma4 deferred — depends on joule-l1 + pattern-core (OpenIE IP).
    # Will port with surgery once jouleclaw-l1 ships a thin lawful-tier
    # trait surface in Phase 6.

    # Phase 5 — omni-modal generation (single crate; will split later)
    "crates/jouleclaw-omni",     # diffusion / stable-diffusion / musicgen
                                 # / whisper / gaussian3d / video / fusion
                                 # / 5 modalities / HAL / orchestrator /
                                 # server — ported wholesale from efficient-genai

    # Phase 6 — agentic v6 (plan/execute/diagnose/compose surface)
    "crates/jouleclaw-schema",
    "crates/jouleclaw-plan",
    "crates/jouleclaw-execute",
    "crates/jouleclaw-compose",
    "crates/jouleclaw-deberta",
    "crates/jouleclaw-diagnose",
    "crates/jouleclaw-edge-cli",
    "crates/jouleclaw-edge-client",

    # Phase 6 — net-new (the standard-defining moat)
    "crates/jouleclaw-prov",     # signed receipt per resolution
    "crates/jouleclaw-fresh",    # search-first + provenance envelope
    "crates/jouleclaw-mcp",      # rmcp-compatible + joule-mcp profile
    "crates/jouleclaw-cli",      # jclaw binary (Pi-class minimal harness)
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/Transaction-Science/open-standards"
authors = ["JouleClaw Contributors"]
description = "JouleClaw — energy-optimised AI runtime. Apache-2.0 Rust reference implementation."

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
thiserror = "2"
blake3 = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# Numerics + tensors
half = "2"
bytemuck = { version = "1", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
async-trait = "0.1"

# Telemetry
tracing = "0.1"

# Hardware energy telemetry — pinned where production-ready (from wave-1 research)
nvml-wrapper = "0.10"  # NVIDIA discrete GPU, production-ready

# Testing
proptest = "1"
insta = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
