[workspace]
resolver = "3"
members = [
    # Phase 1 — foundation
    "crates/jouleclaw-core",
    "crates/jouleclaw-topology",
    "crates/jouleclaw-energy",

    # Phase 2 — cascade + format + persistence + wire
    "crates/jouleclaw-cascade",
    "crates/jouleclaw-loader-gguf",
    "crates/jouleclaw-pack",
    "crates/jouleclaw-history",
    "crates/jouleclaw-wire",

    # Phase 3 — backends + runtime
    "crates/jouleclaw-backend-reference",
    "crates/jouleclaw-backend-apple",
    "crates/jouleclaw-runtime",

    # Phase 4 — model tiers
    "crates/jouleclaw-liquid",   # L3 CfC SSM
    "crates/jouleclaw-prism",    # L3 1-bit / ternary BitNet
    "crates/jouleclaw-mrl",      # L2 Matryoshka embeddings
    "crates/jouleclaw-lmm",      # L3 multimodal (vision/text/audio)
    "crates/jouleclaw-ebm",      # L1/L3 energy-based constraint sat
    # gemma4 deferred — depends on joule-l1 + pattern-core (OpenIE IP).
    # Will port with surgery once jouleclaw-l1 ships a thin lawful-tier
    # trait surface in Phase 6.

    # Phase 5 — omni-modal generation (single crate; will split later)
    "crates/jouleclaw-omni",     # diffusion / stable-diffusion / musicgen
                                 # / whisper / gaussian3d / video / fusion
                                 # / 5 modalities / HAL / orchestrator /
                                 # server — ported wholesale from efficient-genai

    # Phase 6 — agentic v6 (plan/execute/diagnose/compose surface)
    "crates/jouleclaw-schema",
    "crates/jouleclaw-plan",
    "crates/jouleclaw-execute",
    "crates/jouleclaw-compose",
    "crates/jouleclaw-deberta",
    "crates/jouleclaw-diagnose",
    "crates/jouleclaw-edge-cli",
    "crates/jouleclaw-edge-client",

    # Phase 6 — net-new (the standard-defining moat)
    "crates/jouleclaw-prov",     # signed receipt per resolution
    "crates/jouleclaw-fresh",    # search-first + provenance envelope
    "crates/jouleclaw-mcp",      # rmcp-compatible + joule-mcp profile
    "crates/jouleclaw-cli",      # jclaw binary (Pi-class minimal harness)
    "crates/jouleclaw-edge",     # end-to-end edge demo + LawfulRegistryTier shim
    "crates/jouleclaw-verify",   # verifier-in-the-loop — AI proposes, verifier disposes
    "crates/jouleclaw-deterministic",  # L1 standard library — 30+ deterministic primitives

    # Pre-cascade resolver — registered, never-evicted lookup table.
    "crates/jouleclaw-lut",

    # L0.5 tool-compute tier — 484 deterministic, zero-hallucination pure-function tools.
    "crates/jouleclaw-tools",

    # L0.25 formula-first tier — structural-contrast relationship resolver.
    "crates/jouleclaw-formula",

    # L0.5 tool-tier — Tier adapter over jouleclaw-tools (registry of 484 deterministic tools).
    "crates/jouleclaw-tool-tier",

    # Regulatory-compliance wedge built on the energy substrate.
    "crates/jouleclaw-compliance",

    # Grammar-constrained decoding for L3/L4 model outputs.
    "crates/jouleclaw-decode",

    # L4.5 proof-solver tier — deterministic CSP at constraint-solver energy.
    "crates/jouleclaw-proof-tier",

    # Typed-signature programs — DSPy-style modules + compiler, pure Rust.
    "crates/jouleclaw-program",

    # L0.75 SSM-router tier — local intent classifier, picks downstream tiers.
    "crates/jouleclaw-ssm-router",

    # L1.25 GraphRAG tier — deterministic entity extraction + KG enrichment.
    "crates/jouleclaw-graph-rag",

    # L1.375 structural-contrast tier — second formula pass with graph context.
    "crates/jouleclaw-struct-contrast",

    # L1.5 SSM-reader tier — local reading-comprehension QA over passages.
    "crates/jouleclaw-ssm-reader",

    # L2 federation tier — multi-provider parallel search + fusion.
    "crates/jouleclaw-federation",

    # L2.5 neural-rerank tier — reranker (BM25 default; ColBERT/SPLADE plug-in).
    "crates/jouleclaw-rerank",

    # L1 local-index tier — BM25-shaped retrieval over an in-process corpus.
    "crates/jouleclaw-local-index",

    # L3 cheap-LLM tier — sync trait surface, EchoBackend default.
    "crates/jouleclaw-llm-cheap",

    # L4 cross-model verification tier — parallel dispatch + agreement checker.
    "crates/jouleclaw-verification-tier",

    # L5 learned-routing tier — episode-memory dispatch ordering (meta).
    "crates/jouleclaw-routing",

    # L6 agent tier — multi-step recursive cascade (decompose/dispatch/compose).
    "crates/jouleclaw-agent",

    # L7 reflection — offline meta-cognitive learning, promote/demote lessons.
    "crates/jouleclaw-reflection",

    # L8 self-tuner — five damped control loops over cascade dynamics.
    "crates/jouleclaw-tuner",

    # L9 supervisor — pathology detection (explosion/starvation/oscillation/inversion).
    "crates/jouleclaw-supervisor",

    # L10 governor — rolling joule budget, per-tenant quotas, kill switch.
    "crates/jouleclaw-governor",

    # Full-stack assembler — wires the tier crates into one runnable Runtime + control plane.
    "crates/jouleclaw-stack",

    # Yang→yin promotion — verified model answers become permanent deterministic facts (cost→0 with use).
    "crates/jouleclaw-promote",

    # Skill-compilation — verified resolutions become typed parameterized deterministic skills (a whole query class, no model).
    "crates/jouleclaw-skill",

    # Agent memory layer — CoALA-typed (working/episodic/semantic/procedural), content-addressed, signed-receipt-ready facts.
    "crates/jouleclaw-memory",

    # L1 fact extraction — deterministic regex extractor (hashtags / mentions / quoted / key:value) that composes with jouleclaw-memory.
    "crates/jouleclaw-extract",

    # Composed recall — memory BM25 top-N → jouleclaw-rerank → top-K (the Hindsight pattern, substrate-grade).
    "crates/jouleclaw-recall",

    # Consolidation — CoALA episodic→semantic, scheduled batch. Deterministic tag-clustering reference + trait for LLM abstraction.
    "crates/jouleclaw-consolidate",

    # Writer-critic pattern — fresh-context adversarial gate over (artifact, rubric) with a falsification pass. Builds on jouleclaw-verify.
    "crates/jouleclaw-critic",

    # Persisted run-state — durable typed DAG for multi-step resolutions (linear + branch + join), joule-stamped checkpoints, RunStore trait.
    "crates/jouleclaw-graph",

    # Approval gates — pause a dispatch for review before it runs; energy-shaped (only expensive model calls gated).
    "crates/jouleclaw-approve",

    # Cost-table model-bank dispatcher — route a query to the cheapest capable reasoner slot by measured joules.
    "crates/jouleclaw-dispatch",

    # Session tree — energy-attributed, branchable log of resolutions (Pi-style --fork).
    "crates/jouleclaw-session",

    # AGENTS.md / CLAUDE.md hierarchical discovery, joule-stamped per file read.
    "crates/jouleclaw-agents-md",

    # Progressive-disclosure 3-tier loading (Anthropic Skills-shape); per-tier joule cost is first-class.
    "crates/jouleclaw-disclosure",

    # Eval-driven skill engineering — Executor/Grader/Comparator with energy-as-pass-criterion (EnergyBudgetGrader).
    "crates/jouleclaw-evals",

    # Runtime-enforced control-flow gates over a Run, including EnergyBudgetGate (physics-grounded refusal).
    "crates/jouleclaw-gate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/Transaction-Science/open-standards"
authors = ["JouleClaw Contributors"]
description = "JouleClaw — energy-optimised AI runtime. Apache-2.0 Rust reference implementation."

[workspace.dependencies]
# Core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
serde_yml = "0.0.12"
toml = "0.8"
thiserror = "2"
blake3 = "1"
sha2 = "0.10"
base64 = "0.22"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }

# Optional HTTP (feature-gated in jouleclaw-tools)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Numerics + tensors
half = "2"
bytemuck = { version = "1", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
async-trait = "0.1"

# Telemetry
tracing = "0.1"

# Hardware energy telemetry — pinned where production-ready (from wave-1 research)
nvml-wrapper = "0.10"  # NVIDIA discrete GPU, production-ready

# Testing
proptest = "1"
insta = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = "none"
