[package]
name = "op-dispute-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "OpenPay chargeback / dispute lifecycle and evidence packaging across Visa VCR, Mastercard Mastercom, Amex SafeKey, Discover DRR, and PayPal."

[dependencies]
op-core = { path = "../op-core" }
op-dispute = { path = "../op-dispute" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
